[project]
name = 'dotenv-utils'
readme = 'README.md'
description = 'A tiny, self-contained package to parse environment variables.'
requires-python = '>=3.9'
version = '0.1.0.beta'
authors = [
    { name = 'Fynn Freyer', email = 'fynn@fynns.site' },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    'autopep8',
    'isort',
    'mypy',
    'ruff',
]

[project.urls]
"Repository" = "https://github.com/FynnFreyer/dotenv-utils"
"Issues" = "https://github.com/FynnFreyer/dotenv-utils/issues"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['dotenv-utils']

# Formatting options
[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
jobs = -1

[tool.isort]
line_length = 120

# Linting options
[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.lint]
select = ['E', 'F', 'B', 'Q']
ignore = ['B905']
mccabe = {max-complexity = 5}
